objects/Appeal__c.object
<CustomObject>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WAM__c</fullName>
        <formula>Dealership_Name__r.Website_AM__c</formula>
        <inlineHelpText>formula field that reads the WAM from the Account</inlineHelpText>
        <label>WAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_are_we_issuing_credit__c</fullName>
        <inlineHelpText>Cancellation - canceling all products. 
Downgrade - canceling some products. 
Contract Adj - monthly bill reduced with no product changes. 
Product Swaps should use a Downgrade Appeal to remove old product, and an Opportunity to create new product.</inlineHelpText>
        <label>Appeal Category</label>
        <picklist>
            <controllingField>Type_of_Credit__c</controllingField>
            <picklistValues>
                <fullName>Applied 30-day Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Conquest Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Concession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Buy-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Entry Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Refund of Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-Time Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Reduction Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Fee Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund (other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund of Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Tax Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save/Retention</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Appeal</label>
    <listViews>
        <fullName>All_Appeals</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Parent_Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Pending_Approval_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Credited__c</columns>
        <columns>Primary_Driver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Credited__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2016</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>lessOrEqual</operation>
            <value>4/30/2016</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Appeal__c.vAuto,Appeal__c.vAuto_Adjustment</value>
        </filters>
        <filters>
            <field>Free_Training_Requested__c</field>
            <operation>notEqual</operation>
            <value>YES</value>
        </filters>
        <filters>
            <field>Type_of_Credit__c</field>
            <operation>equals</operation>
            <value>Canceled Sale (Failure to Launch)</value>
        </filters>
        <label>All Appeals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Appeals_Beachner</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Products_Canceled__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Approved__c</columns>
        <columns>How_was_this_evaluated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>beachner</value>
        </filters>
        <label>Appeals - Beachner</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appeals_Briggs</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Products_Canceled__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Amount_Approved__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>How_was_this_evaluated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Briggs</value>
        </filters>
        <label>Appeals - Briggs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appeals_Hoppe</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Products_Canceled__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Amount_Approved__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>How_was_this_evaluated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>hoppe</value>
        </filters>
        <label>Appeals - Hoppe</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Applied</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>MRR__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>Credit_Note_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Credit_Applied__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <filters>
            <field>Credit_Requested__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>lessThan</operation>
            <value>1/31/2014</value>
        </filters>
        <label>Approved - Credit Applied</label>
    </listViews>
    <listViews>
        <fullName>Approved_Not_Applied</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>MRR__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Credit_Applied__c</field>
            <operation>equals</operation>
            <value>NO</value>
        </filters>
        <filters>
            <field>Credit_Requested__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <label>Approved - Credit Not Applied</label>
    </listViews>
    <listViews>
        <fullName>Cancellation_Appeals</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Related_POA__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>Primary_Reason_for_Cancellation__c</columns>
        <columns>Date_Saved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Why_are_we_issuing_credit__c</field>
            <operation>equals</operation>
            <value>Cancellation</value>
        </filters>
        <filters>
            <field>Type_of_Credit__c</field>
            <operation>equals</operation>
            <value>Lost Business</value>
        </filters>
        <label>Cancellation Appeals</label>
    </listViews>
    <listViews>
        <fullName>Cancellation_Appeals1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Credit_Applied__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Date_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Credited__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>lessOrEqual</operation>
            <value>2/28/2014</value>
        </filters>
        <filters>
            <field>Type_of_Credit__c</field>
            <operation>equals</operation>
            <value>Lost Business</value>
        </filters>
        <label>Cancellation Appeals</label>
    </listViews>
    <listViews>
        <fullName>Cancellation_Appeals2</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Credit_Applied__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Date_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Credited__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>lessOrEqual</operation>
            <value>2/1/2014</value>
        </filters>
        <filters>
            <field>Type_of_Credit__c</field>
            <operation>equals</operation>
            <value>Lost Business</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,In Progress,Approved</value>
        </filters>
        <label>Cancellation Appeals</label>
    </listViews>
    <listViews>
        <fullName>FTL_Appeals</fullName>
        <columns>Type_of_Credit__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>MRR__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Credit_Applied__c</columns>
        <columns>Date_Credited__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_Credit__c</field>
            <operation>equals</operation>
            <value>FTL Recurring,FTL One-Time</value>
        </filters>
        <label>FTL Appeals</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>Credit_Note_Number__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Date_Credited__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/25/2013</value>
        </filters>
        <label>Submitted - In Progress</label>
    </listViews>
    <listViews>
        <fullName>Mark_test</fullName>
        <columns>NAME</columns>
        <columns>Amount_Requested_Training__c</columns>
        <columns>Amount_of_Training_Days_Requested__c</columns>
        <columns>How_was_this_evaluated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Amount_Requested_Training__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Mark test</label>
    </listViews>
    <listViews>
        <fullName>My_Appeals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>My Appeals</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Rejected</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Dealership_Name__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>MRR__c</columns>
        <columns>Dealer_Contact_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Date_Credited__c</columns>
        <columns>Credit_Note_Number__c</columns>
        <columns>Requested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Submitted - Rejected</label>
    </listViews>
    <listViews>
        <fullName>find</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>MRR__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Amount_Requested_Credit__c</columns>
        <columns>Type_of_Credit__c</columns>
        <columns>Why_are_we_issuing_credit__c</columns>
        <columns>Primary_Reason_for_Cancellation__c</columns>
        <columns>Date_Credited__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>find</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{000000}</displayFormat>
        <label>Appeal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appeals</pluralLabel>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto</fullName>
        <active>true</active>
        <label>vAuto</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto_Adjustment</fullName>
        <active>true</active>
        <description>used to process billing adjustment requests</description>
        <label>vAuto Adjustment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Approval_Status</fullName>
        <active>true</active>
        <description>Approval status can not be changed to Approved</description>
        <errorConditionFormula>OR(
   (
      ISNEW() &amp;&amp;
      !ISPICKVAL(Approval_Status__c, &quot;Not Submitted&quot;)
   ),
   (
      PRIORVALUE (Approval_Status__c) = &quot;Not Submitted&quot; &amp;&amp;
      ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)
   )
)
&amp;&amp;
   NOT( 
      OR(
         $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
         $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
         $User.UserRoleId = &quot;00E70000001GE8B&quot; /*Salesforce Developer*/
      )
   )</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>You cannot set the status to &quot;Approved&quot; before going through the Approval process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Requested_Check</fullName>
        <active>true</active>
        <description>If credit is requested, there must be an amount added.</description>
        <errorConditionFormula>ISPICKVAL(Credit_Requested__c, &quot;YES&quot;) &amp;&amp; ISBLANK(Amount_Requested_Credit__c)</errorConditionFormula>
        <errorDisplayField>Amount_Requested_Credit__c</errorDisplayField>
        <errorMessage>If credit is requested, then you must enter an amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Date_Credited__c ) &amp;&amp;
NOT ( OR(
   $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/
   $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/
   $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/
   $User.UserRoleId = &quot;00E70000001GE8B&quot; /*Salesforce Developer*/
))</errorConditionFormula>
        <errorDisplayField>Date_Credited__c</errorDisplayField>
        <errorMessage>You must enter a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_New_Provider_for_Cancel_Downgrad</fullName>
        <active>true</active>
        <description>Cancellations and Downgrades require that you specify the name of the company we are losing their business to.</description>
        <errorConditionFormula>OR(
   ISPICKVAL(Why_are_we_issuing_credit__c, &quot;Cancellation&quot;),
   ISPICKVAL(Why_are_we_issuing_credit__c, &quot;Downgrade&quot;)
) &amp;&amp;
ISBLANK(New_Provider__c)</errorConditionFormula>
        <errorDisplayField>New_Provider__c</errorDisplayField>
        <errorMessage>Cancellations and Downgrades require that you specify the name of the company we are losing their business to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reasons_for_Cancel_Downgrade</fullName>
        <active>true</active>
        <description>Please enter the reason the client is cancelling or downgrading.</description>
        <errorConditionFormula>OR(
   ISPICKVAL(Why_are_we_issuing_credit__c, &quot;Cancellation&quot;),
   ISPICKVAL(Why_are_we_issuing_credit__c, &quot;Downgrade&quot;)
) &amp;&amp;
ISBLANK(TEXT(Primary_Reason_for_Cancellation__c))</errorConditionFormula>
        <errorDisplayField>Primary_Reason_for_Cancellation__c</errorDisplayField>
        <errorMessage>Please enter the reason the client is cancelling or downgrading.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Amount_Approved</fullName>
        <active>true</active>
        <description>Restricts changing the amount approved to certain users.</description>
        <errorConditionFormula>AND(  
      ISCHANGED( Amount_Approved__c ), 
      NOT ( OR( 
            $User.ProfileId = &quot;00e70000001FiMt&quot;, /*VinSet Paid Button Hitter*/
            $User.ProfileId = &quot;00e70000000wzUb&quot;, /*VinExecutive user*/
            $User.ProfileId = &quot;00e70000000wzXQ&quot;, /*VinSystem Admin*/
            $User.ProfileId = &quot;00e70000001FaWM&quot;, /*VinSystem Dev Admin*/
            $User.ProfileId = &quot;00e70000001FiDh&quot; /*VinSystem Jr Admin*/
      ) ) 
   )</errorConditionFormula>
        <errorDisplayField>Amount_Approved__c</errorDisplayField>
        <errorMessage>You do not have permission to change this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Approval_Status_Change</fullName>
        <active>true</active>
        <description>Restricts changing the approval status dropdown to certain users.</description>
        <errorConditionFormula>AND(  
      ISCHANGED( Approval_Status__c ), 
      NOT ( OR( 
            $User.ProfileId = &quot;00e70000001FiMt&quot;, /*VinSet Paid Button Hitter*/
            $User.ProfileId = &quot;00e70000000wzUb&quot;, /*VinExecutive user*/
            $User.ProfileId = &quot;00e70000000wzXQ&quot;, /*VinSystem Admin*/
            $User.ProfileId = &quot;00e70000001FaWM&quot;, /*VinSystem Dev Admin*/
            $User.ProfileId = &quot;00e70000001FiDh&quot; /*VinSystem Jr Admin*/
      ) ) 
   )</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>You do not have permission to change this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Training_Requested_Check</fullName>
        <active>true</active>
        <description>If free training is requested, an amount must be entered.</description>
        <errorConditionFormula>ISPICKVAL(Free_Training_Requested__c, &quot;YES&quot;) &amp;&amp; ISBLANK( Amount_of_Training_Days_Requested__c )</errorConditionFormula>
        <errorDisplayField>Amount_of_Training_Days_Requested__c</errorDisplayField>
        <errorMessage>If free training is requested, you must enter an amount.</errorMessage>
    </validationRules>
</CustomObject>